--- a/src/main/resources/application-node3.yml
+++ b/src/main/resources/application-node3.yml
@@ -1,7 +1,6 @@
-
 spring:
   datasource:
-    url: jdbc:mysql://47.98.52.205:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://47.98.52.205:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
